// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxDirective Basic checkbox should create with value 2 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox"
  type="checkbox"
  value="2"
/>
`;

exports[`CheckboxDirective Basic checkbox should create with value val1 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox"
  type="checkbox"
  value="val1"
/>
`;

exports[`CheckboxDirective Basic checkbox should emit null on uncheck 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective Basic checkbox should emit value on check 1`] = `
<input
  adrcheckbox=""
  checked="true"
  class="adr-checkbox adr-checked"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective Disabled checkbox check does not emit value 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox adr-disabled"
  disabled="true"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective ReactiveForm checkbox check is touched on change 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox ng-valid ng-touched ng-dirty"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective ReactiveForm checkbox should create checked 1`] = `
<input
  adrcheckbox=""
  checked="true"
  class="adr-checkbox adr-checked ng-untouched ng-pristine ng-valid"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective ReactiveForm checkbox should create disabled 1`] = `
<input
  adrcheckbox=""
  checked="true"
  class="adr-checkbox adr-checked ng-untouched ng-pristine adr-disabled"
  disabled="true"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective ReactiveForm checkbox should create unchecked 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox ng-untouched ng-pristine ng-valid"
  type="checkbox"
  value="val"
/>
`;

exports[`CheckboxDirective Readonly checkbox check does not emit value 1`] = `
<input
  adrcheckbox=""
  class="adr-checkbox adr-readonly"
  readonly="true"
  type="checkbox"
  value="val"
/>
`;
